--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-22  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/Makefile.am, libltdl/loaders/Makefile.am: Look for
+	included files in the right places.
+
 2004-07-18  Peter O'Gorman  <peter@pogma.com>
 
 	* ltmain.in [darwin](func_extract_archives): Because fat archives
