--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-28  Peter O'Gorman  <peter@pogma.com>
+
+	* libtool.m4, ltmain.in [darwin]: Backport xlc support from cvs HEAD.
+
 2004-07-22  Joe Orton  <joe@manyfish.co.uk>
 
 	* libtool.m4: Treat bsdi5* like bsdi4*. 
