--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-29  Gary V. Vaughan  <gary@gnu.org>
+
+	* configure.ac (AC_INIT): Revert an accidental commit from my
+	testing of package_revision.
+
 2004-07-29  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* doc/libtool.texi (Tags): Document CC.
