--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-07-30  Peter O'Gorman  <peter@pogma.com>
 
+	* ltmain.in [darwin]: We already had a module var, there can be
+	only one.
+
 	* m4/libtool.m4, ltmain.in: autoconf now says the best thing to do
 	with CDPATH is to (unset CDPATH) >/dev/null 2>&1 && unset CDPATH,
 	so do it.
