--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-03  Jacob Meuser <jakemsr@jakemsr.com>
+
+	* ltmain.in: Allow some static libraries to be used in generating a
+	shared library on NetBSD and OpenBSD. match-pattern_regex decides
+	which are good.
+
 2004-08-02  Geoffrey Keating  <geoffk@apple.com>
 
 	* m4/libtool.m4 [darwin]: Don't use -all_load.
