--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.5.9a: 2004-??-??; CVS version 1.5.9a, Libtool team:
+* Bug Fixes.
+
 New in 1.5.8: 2004-08-07; CVS version 1.5.7a, Libtool team:
 * Support for Intel C++ version 8.0.
 * Improved support for OpenBSD.
