--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-12  Peter O'Gorman  <peter@pogma.com>
+
+	* libtool.m4 [GNU/linux] (AC_DEPLIBS_CHECK_METHOD): Cleanup,
+	thanks to Daniel Reed.
+
 2004-08-11  Daniel Reed  <djr@redhat.com>
 
 	* tests/demo-nopic.test: Do not run on x86_64 or s390*
